feat: Comment Controller done. nextFeat: LikeController will be coded.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=kenanbylan
 spring.security.user.password=123
 
+
+
+logging.level.org.springframework.web=DEBUG
